# ctrip

./: .gitignore  .gitmodules  CMakeLists.txt  PROTOCOL.md  README.md  TODO.md  ctrip.pc.in
include/: trip.h  trip_all.h  trip_extra.h  trip_protocol.h  trip_util.h
src/: time.c  trip.c  trip_extra.c
test/: CMakeLists.txt  basics.c  recv.c
